--- a/cuauhtemovil/package.json
+++ b/cuauhtemovil/package.json
@@ -47,8 +47,8 @@
     },
     "devDependencies": {
         "@ionic/app-scripts": "^1.3.7",
-        "@ionic/cli-plugin-cordova": "1.1.2",
-        "@ionic/cli-plugin-ionic-angular": "1.1.2",
+        "@ionic/cli-plugin-cordova": "^1.4.1",
+        "@ionic/cli-plugin-ionic-angular": "^1.3.2",
         "typescript": "2.2.1"
     },
     "description": "An Ionic project",
